# manchu-morph

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: analysis.rs  lattice.rs
resources/: edge_cost.json  function_word.json  juwan_juwe_uju.csv  suffix.csv
scripts/: format_lattice.py
src/: edge_cost.rs  function_word.rs  lattice.rs  lib.rs  phoneme.rs  split_clitic.rs  split_suffix.rs  splited_word.rs  tokenizer.rs  word.rs
