[package]
name = "manchu-morph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
manchu-converter = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
unicode-segmentation = "1.10.1"
